# sfml_game_development

./: .clang-format  CMakeLists.txt
include/: game.hpp  resource_holder.hpp
src/: game.cpp  main.cpp
